--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,45 @@
     <meta charset="UTF-8">
     <meta name="veiwport" content="width=device=width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-    {% block head %}{% endblock %}
+    <link rel="stylesheet" href="{{  url_for('static', filename='css/main.css') }}">
+    <title>News Aggregator</title>
 </head>
+
 <body>
-    {% block body %}{% endblock %}
+    <header>
+        <div class="container">
+            <h1>News Aggregator with Sentiment Analysis</h1>
+            {% block description %}{% endblock %}
+            <p>
+                <u><b>Polarity</b></u> is scored between -1 and 1. The lower the score the more negative the article. A score of -0.89 would mean the 
+                article is very negative.
+            </p>
+            <p>
+                <u><b>Subjectivity</b></u> is scored between 0 and 1. The higher the score the more subjective (based on or influenced by personal feelings, 
+                tastes, or opinions) the article. A low subjectivity score mean the article is objective (not influenced by personal feelings 
+                or opinions in considering and representing facts).
+            </p>
+            <p class="disclaimer">*Sentiment analysis is preformed on each article and articles may take a minute to fully load.*</p>
+        </div>
+    </header>
+
+    <nav>
+        <form action="{{ url_for('news') }}" method="POST">
+            <input type="submit" name="key" value="Home" />
+            <input type="submit" name="key" value="Politics" />
+            <input type="submit" name="key" value="Entertainment" />
+            <input type="submit" name="key" value="Sports" />
+            <input type="submit" name="key" value="Tech" />
+            <input type="submit" name="key" value="Business" />
+        </form>
+    </nav>
+
+    <div>
+        {% block body %}{% endblock %}
+    </div>
+    
+    <footer align="center">
+        <p>Developed and Implemented by Devon Wright</p>
+    </footer>
 </body>
 </html>
