--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
         {% block body %}{% endblock %}
     </div>
     
-    <footer align="center">
+    <footer>
         <p>Developed and Implemented by Devon Wright</p>
     </footer>
 </body>
